--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,21 @@ language: python
 python:
   - 3.9
 
-env:
-  global:
-    - PIPENV_VENV_IN_PROJECT=1
-    - PIPENV_IGNORE_VIRTUALENVS=1
+services:
+  - postgresql
+addons:
+  postgresql: '9.5'
 
 install:
   - pip install -q pipenv codecov
   - pipenv sync --dev
   - cp contrib/env-sample .env
 
+before_script:
+  - psql -c "CREATE DATABASE testdb;" -U postgres
+
 script:
-  - pipenv run flake8 .
+  - flake8
   - pipenv run pytest --cov=pypro
 
 after_success:
